--- a/cmd/mdatagen/templates/component_test.go.tmpl
+++ b/cmd/mdatagen/templates/component_test.go.tmpl
@@ -19,9 +19,15 @@ import (
 	"go.opentelemetry.io/collector/processor"
 	"go.opentelemetry.io/collector/processor/processortest"
 {{ end }}
+{{ if isReceiver }}
+	"go.opentelemetry.io/collector/consumer/consumertest"
+	"go.opentelemetry.io/collector/receiver"
+	"go.opentelemetry.io/collector/receiver/receivertest"
+{{ end }}
 	"go.opentelemetry.io/collector/confmap/confmaptest"
-
+{{ if or (isExporter) (isProcessor) }}
 	"github.com/open-telemetry/opentelemetry-collector-contrib/internal/coreinternal/testdata"
+{{ end }}
 )
 
 // assertNoErrorHost implements a component.Host that asserts that there were no errors.
@@ -220,6 +226,75 @@ func Test_ComponentLifecycle(t *testing.T) {
 			assert.NoError(t, err)
 			err = c.Shutdown(context.Background())
 			require.NoError(t, err)
+		})
+	}
+}
+{{ end }}
+
+{{ if isReceiver }}
+func Test_ComponentLifecycle(t *testing.T) {
+	factory := NewFactory()
+
+	tests := []struct{
+		name string
+		createFn func(ctx context.Context, set receiver.CreateSettings, cfg component.Config) (component.Component, error)
+	}{
+{{ if supportsLogs }}
+		{
+			name: "logs",
+			createFn: func(ctx context.Context, set receiver.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateLogsReceiver(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsMetrics }}
+		{
+			name: "metrics",
+			createFn: func(ctx context.Context, set receiver.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateMetricsReceiver(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsTraces }}
+		{
+			name: "traces",
+			createFn: func(ctx context.Context, set receiver.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateTracesReceiver(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+	}
+
+	cm, err := confmaptest.LoadConf("metadata.yaml")
+	require.NoError(t, err)
+	cfg := factory.CreateDefaultConfig()
+	sub, err := cm.Sub("tests::config")
+	require.NoError(t, err)
+	require.NoError(t, component.UnmarshalConfig(sub, cfg))
+
+	for _, test := range tests {
+		t.Run(test.name + "-shutdown", func(t *testing.T) {
+			c, err := test.createFn(context.Background(), receivertest.NewNopCreateSettings(), cfg)
+			require.NoError(t, err)
+			err = c.Shutdown(context.Background())
+			require.NoError(t, err)
+		})
+
+		t.Run(test.name + "-lifecycle", func(t *testing.T) {
+			{{ if skipLifecycle }}
+			// TODO support lifecycle
+			t.SkipNow()
+			{{ end }}
+			firstRcvr, err := test.createFn(context.Background(), receivertest.NewNopCreateSettings(), cfg)
+			require.NoError(t, err)
+			host := newAssertNoErrorHost(t)
+			require.NoError(t, err)
+			require.NoError(t, firstRcvr.Start(context.Background(), host))
+			require.NoError(t, firstRcvr.Shutdown(context.Background()))
+			secondRcvr, err := test.createFn(context.Background(), receivertest.NewNopCreateSettings(), cfg)
+			require.NoError(t, err)
+			require.NoError(t, secondRcvr.Start(context.Background(), host))
+			require.NoError(t, secondRcvr.Shutdown(context.Background()))
 		})
 	}
 }
