--- a/cmd/mdatagen/templates/component_test.go.tmpl
+++ b/cmd/mdatagen/templates/component_test.go.tmpl
@@ -27,6 +27,11 @@ import (
 {{ if isExtension }}
 	"go.opentelemetry.io/collector/extension/extensiontest"
 {{ end }}
+{{ if isConnector }}
+	"go.opentelemetry.io/collector/consumer/consumertest"
+	"go.opentelemetry.io/collector/connector"
+	"go.opentelemetry.io/collector/connector/connectortest"
+{{ end }}
 	"go.opentelemetry.io/collector/confmap/confmaptest"
 {{ if or (isExporter) (isProcessor) }}
 	"github.com/open-telemetry/opentelemetry-collector-contrib/internal/coreinternal/testdata"
@@ -336,5 +341,122 @@ func TestComponentLifecycle(t *testing.T) {
 		require.NoError(t, secondExt.Start(context.Background(), newAssertNoErrorHost(t)))
 		require.NoError(t, secondExt.Shutdown(context.Background()))
 	})
+}
+{{ end }}
+
+{{ if isConnector }}
+func TestComponentLifecycle(t *testing.T) {
+	factory := NewFactory()
+
+	tests := []struct{
+		name string
+		createFn func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error)
+	}{
+{{ if supportsLogsToLogs }}
+		{
+			name: "logs_to_logs",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateLogsToLogs(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsLogsToMetrics }}
+		{
+			name: "logs_to_metrics",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateLogsToMetrics(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsLogsToTraces }}
+		{
+			name: "logs_to_traces",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateLogsToTraces(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsMetricsToLogs }}
+		{
+			name: "metrics_to_logs",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateMetricsToLogs(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsMetricsToMetrics }}
+		{
+			name: "metrics_to_metrics",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateMetricsToMetrics(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsMetricsToTraces }}
+		{
+			name: "metrics_to_traces",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateMetricsToTraces(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsTracesToLogs }}
+		{
+			name: "traces_to_logs",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateTracesToLogs(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsTracesToMetrics }}
+		{
+			name: "traces_to_metrics",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateTracesToMetrics(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+{{ if supportsTracesToTraces }}
+		{
+			name: "traces_to_traces",
+			createFn: func(ctx context.Context, set connector.CreateSettings, cfg component.Config) (component.Component, error) {
+				return factory.CreateTracesToTraces(ctx, set, cfg, consumertest.NewNop())
+			},
+		},
+{{ end }}
+	}
+
+	cm, err := confmaptest.LoadConf("metadata.yaml")
+	require.NoError(t, err)
+	cfg := factory.CreateDefaultConfig()
+	sub, err := cm.Sub("tests::config")
+	require.NoError(t, err)
+	require.NoError(t, component.UnmarshalConfig(sub, cfg))
+
+	for _, test := range tests {
+		t.Run(test.name + "-shutdown", func(t *testing.T) {
+			c, err := test.createFn(context.Background(), connectortest.NewNopCreateSettings(), cfg)
+			require.NoError(t, err)
+			err = c.Shutdown(context.Background())
+			require.NoError(t, err)
+		})
+
+		t.Run(test.name + "-lifecycle", func(t *testing.T) {
+			{{ if skipLifecycle }}
+			// TODO support lifecycle
+			t.SkipNow()
+			{{ end }}
+			firstConnector, err := test.createFn(context.Background(), connectortest.NewNopCreateSettings(), cfg)
+			require.NoError(t, err)
+			host := newAssertNoErrorHost(t)
+			require.NoError(t, err)
+			require.NoError(t, firstConnector.Start(context.Background(), host))
+			require.NoError(t, firstConnector.Shutdown(context.Background()))
+			secondConnector, err := test.createFn(context.Background(), connectortest.NewNopCreateSettings(), cfg)
+			require.NoError(t, err)
+			require.NoError(t, secondConnector.Start(context.Background(), host))
+			require.NoError(t, secondConnector.Shutdown(context.Background()))
+		})
+	}
 }
 {{ end }}
